[package]
name = "aoc-2022-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
num-integer = "0.1.45"
regex = "1.7.0"
strum = { version = "0.24.1", features = ["derive"] }
take-until = "0.1.0"
